[tool.poetry]
name = "repl_python3_turtleisland"
version = "0.1.0"
description = ""
authors = ["mike-oxlong69 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
